--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html >
+<html>
   <head>
     <meta charset="UTF-8">
     <title>CSS 材料设计开关</title>
@@ -26,8 +26,8 @@
      <input type="checkbox" id="switch7" class='switch lime' checked/>
   <label for="switch7"></label>
   青色
-   <input type="checkbox" id="switch8" class='switch cyan' checked/>
-  <label for="switch8"></label>蓝灰
+   <input type="checkbox" id="switch8" class='switch cyan' checked disabled/>
+  <label for="switch8"></label>蓝灰默认开启禁止关闭
   <input type="checkbox" id="switch9" class='switch green' disabled/>
   <label for="switch9"></label>
  禁用 
